--- a/src/StereoMixLobby/Properties/launchSettings.json
+++ b/src/StereoMixLobby/Properties/launchSettings.json
@@ -1,29 +1,21 @@
 {
-    "profiles": {
-        "http": {
-            "commandName": "Project",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "dotnetRunMessages": true,
-            "applicationUrl": "http://localhost:5273"
-        },
-        "https": {
-            "commandName": "Project",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "dotnetRunMessages": true,
-            "applicationUrl": "https://localhost:7149;http://localhost:5273"
-        },
-        "Container (Dockerfile)": {
-            "commandName": "Docker",
-            "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-            "environmentVariables": {
-                "ASPNETCORE_HTTP_PORTS": "8080"
-            },
-            "publishAllPorts": true
-        }
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "profiles": {
+    "http": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5273"
     },
-    "$schema": "https://json.schemastore.org/launchsettings.json"
+    "https": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7149;http://localhost:5273"
+    }
+  }
 }
