--- a/src/StereoMixLobby/appsettings.json
+++ b/src/StereoMixLobby/appsettings.json
@@ -1,17 +1,14 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "Kestrel": {
-        "Endpoints": {
-            "HttpsInlineCertFile": {
-                "Url": "https://localhost:5050",
-                "Protocols": "Http2"
-            }
-        }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  }
 }
