--- a/src/StereoMixLobby/Properties/launchSettings.json
+++ b/src/StereoMixLobby/Properties/launchSettings.json
@@ -6,16 +6,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5273"
+      "dotnetRunMessages": true
     },
     "https": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7149;http://localhost:5273"
+      "dotnetRunMessages": true
     }
   }
 }
