--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ root = true
 ;
 ; Here are some resources for what's supported for .NET/C#
 ; https://kent-boogaart.com/blog/editorconfig-reference-for-c-developers
-; https://learn.microsoft.com/visualstudio/ide/editorconfig-code-style-settings-reference
+; https://learn.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference
 ;
 ; Be **careful** editing this because some of the rules don't support adding a severity level
 ; For instance if you change to `dotnet_sort_system_directives_first = true:warning` (adding `:warning`)
@@ -19,11 +19,15 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+# Microsoft .NET properties
+csharp_new_line_before_members_in_object_initializers = false
+
+# ReSharper properties
+resharper_wrap_object_and_collection_initializer_style = wrap_if_long
+
 [*.cs]
 indent_size = 4
 dotnet_sort_system_directives_first = true
-# max_line_length = 120
-csharp_indent_block_contents = true
 
 # Don't use this. qualifier
 dotnet_style_qualification_for_field = false:suggestion
@@ -48,6 +52,8 @@ csharp_new_line_before_open_brace = all
 csharp_new_line_before_else = true
 csharp_new_line_before_catch = true
 csharp_new_line_before_finally = true
+csharp_new_line_before_members_in_object_initializers = true
+csharp_new_line_before_members_in_anonymous_types = true
 
 # Namespace settings
 csharp_style_namespace_declarations = file_scoped
@@ -56,40 +62,21 @@ csharp_style_namespace_declarations = file_scoped
 csharp_prefer_braces = true # Prefer curly braces even for one line of code
 
 # name all constant fields using PascalCase
-dotnet_naming_rule.constant_fields_should_be_pascal_case.severity = warning
+dotnet_naming_rule.constant_fields_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.constant_fields_should_be_pascal_case.symbols = constant_fields
 dotnet_naming_rule.constant_fields_should_be_pascal_case.style = pascal_case_style
 dotnet_naming_symbols.constant_fields.applicable_kinds = field
 dotnet_naming_symbols.constant_fields.required_modifiers = const
 dotnet_naming_style.pascal_case_style.capitalization = pascal_case
 
-# static fields should have s_ prefix
-dotnet_naming_rule.static_fields_should_have_prefix.severity = warning
-dotnet_naming_rule.static_fields_should_have_prefix.symbols = static_fields
-dotnet_naming_rule.static_fields_should_have_prefix.style = static_prefix_style
-dotnet_naming_symbols.static_fields.applicable_kinds = field
-dotnet_naming_symbols.static_fields.required_modifiers = static
-dotnet_naming_symbols.static_fields.applicable_accessibilities = private, internal, private_protected
-dotnet_naming_style.static_prefix_style.required_prefix = s_
-dotnet_naming_style.static_prefix_style.capitalization = camel_case
-
 # internal and private fields should be _camelCase
-dotnet_naming_rule.camel_case_for_private_internal_fields.severity = warning
+dotnet_naming_rule.camel_case_for_private_internal_fields.severity = suggestion
 dotnet_naming_rule.camel_case_for_private_internal_fields.symbols = private_internal_fields
 dotnet_naming_rule.camel_case_for_private_internal_fields.style = camel_case_underscore_style
 dotnet_naming_symbols.private_internal_fields.applicable_kinds = field
 dotnet_naming_symbols.private_internal_fields.applicable_accessibilities = private, internal
 dotnet_naming_style.camel_case_underscore_style.required_prefix = _
 dotnet_naming_style.camel_case_underscore_style.capitalization = camel_case
-
-# ReSharper properties
-resharper_keep_existing_expr_member_arrangement = false
-resharper_keep_existing_list_patterns_arrangement = false
-resharper_keep_existing_primary_constructor_declaration_parens_arrangement = false
-resharper_keep_existing_property_patterns_arrangement = false
-resharper_new_line_before_while = true
-resharper_place_simple_accessor_on_single_line = false
-resharper_wrap_before_primary_constructor_declaration_lpar = true
 
 [*.{xml,config,*proj,nuspec,props,resx,targets,yml,tasks}]
 indent_size = 2
@@ -107,6 +94,9 @@ indent_size = 4
 [*.sh]
 indent_size = 4
 end_of_line = lf
+
+[*.{razor,cshtml}]
+charset = utf-8-bom
 
 [*.{cs,vb}]
 
@@ -163,7 +153,7 @@ dotnet_diagnostic.ca1823.severity = warning
 dotnet_diagnostic.ca1825.severity = warning
 
 # CA1826: Do not use Enumerable methods on indexable collections. Instead use the collection directly
-dotnet_diagnostic.ca1826.severity = warning
+dotnet_diagnostic.ca1826.severity = suggestion
 
 # CA1827: Do not use Count() or LongCount() when Any() can be used
 dotnet_diagnostic.ca1827.severity = warning
@@ -270,6 +260,9 @@ dotnet_diagnostic.ca2014.severity = warning
 # CA2016: Forward the 'CancellationToken' parameter to methods that take one
 dotnet_diagnostic.ca2016.severity = warning
 
+# CA2022: Avoid inexact read with `Stream.Read`
+dotnet_diagnostic.ca2022.severity = warning
+
 # CA2200: Rethrow to preserve stack details
 dotnet_diagnostic.ca2200.severity = warning
 
@@ -310,7 +303,7 @@ dotnet_diagnostic.ide0031.severity = warning
 dotnet_diagnostic.ide0035.severity = warning
 
 # IDE0036: Order modifiers
-csharp_preferred_modifier_order = public, private, protected, internal, file, static, extern, new, virtual, abstract, sealed, override, readonly, unsafe, volatile, async:suggestion
+csharp_preferred_modifier_order = public, private, protected, internal, static, extern, new, virtual, abstract, sealed, override, readonly, unsafe, volatile, async:suggestion
 dotnet_diagnostic.ide0036.severity = warning
 
 # IDE0038: Use pattern matching to avoid is check followed by a cast (without variable)
@@ -339,11 +332,8 @@ dotnet_diagnostic.ide0060.severity = warning
 dotnet_diagnostic.ide0062.severity = warning
 
 # IDE0073: File header
-dotnet_diagnostic.ide0073.severity = warning
-file_header_template = Licensed to the.NET Foundation under one or more agreements.\nThe.NET Foundation licenses this file to you under the MIT license.
-
-# IDE1006: Required naming style
-dotnet_diagnostic.ide1006.severity = warning
+# dotnet_diagnostic.IDE0073.severity = silent
+# file_header_template =
 
 # IDE0161: Convert to file-scoped namespace
 dotnet_diagnostic.ide0161.severity = warning
