--- a/src/StereoMixTestClient/StereoMixTestClient.csproj
+++ b/src/StereoMixTestClient/StereoMixTestClient.csproj
@@ -18,8 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Client"/>
-    <Protobuf Include="Protos\heartbeat.proto" GrpcServices="Client"/>
+    <Protobuf Include="..\..\proto\*.proto" GrpcServices="Client"/>
   </ItemGroup>
 
 </Project>
