--- a/src/StereoMix/appsettings.Development.json
+++ b/src/StereoMix/appsettings.Development.json
@@ -1,14 +1,22 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.AspNetCore.Hosting": "Debug",
+      "Microsoft.Extensions.Diagnostics.HealthChecks": "Information",
       "Microsoft.AspNetCore.Routing.EndpointMiddleware": "Debug",
       "Grpc": "Debug",
-      "StereoMix.Edgegap.EdgegapService": "Debug",
-      "StereoMix.Hathora.HathoraCloudService": "Debug",
-      "StereoMix.Grpc.LobbyService": "Debug"
+      "Grpc.AspNetCore.HealthChecks": "Information"
+    }
+  },
+  "StereoMix": {
+    "JWT": {
+      "Issuer": "StereoMixDevGrpcServer",
+      "Audience": {
+        "GameServer": "StereoMixDevGameServer",
+        "Client": "StereoMixDevClient"
+      }
     }
   }
 }
