--- a/src/StereoMix/StereoMix.csproj
+++ b/src/StereoMix/StereoMix.csproj
@@ -6,7 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-    <!--<PublishAot>true</PublishAot>-->
+    <!--    <PublishAot>true</PublishAot>-->
+    <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
+    <publishtTrimmed>true</publishtTrimmed>
     <UserSecretsId>4392092c-5fd3-4adc-b76f-0515888d8a66</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
@@ -23,13 +25,21 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="8.0.4"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4"/>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0"/>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1"/>
-    <PackageReference Include="RestSharp" Version="110.2.0"/>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Auth\"/>
+    <ProjectReference Include="..\Edgegap\Edgegap.csproj"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Grpc\LobbyService.GameServer.cs">
+      <DependentUpon>LobbyService.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Grpc\LobbyService.User.cs">
+      <DependentUpon>LobbyService.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
