--- a/src/StereoMix/appsettings.json
+++ b/src/StereoMix/appsettings.json
@@ -3,13 +3,20 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Hosting": "Debug",
-      "Microsoft.AspNetCore.Routing.EndpointMiddleware": "Debug",
-      "Grpc": "Debug",
-      "StereoMix.Edgegap.EdgegapService": "Debug",
-      "StereoMix.Hathora.HathoraCloudService": "Debug",
-      "StereoMix.Grpc.LobbyService": "Debug"
+      "Microsoft.AspNetCore.Hosting": "Information",
+      "Microsoft.AspNetCore.Routing.EndpointMiddleware": "Information",
+      "Grpc": "Information",
+      "StereoMix": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "StereoMix": {
+    "JWT": {
+      "Issuer": "StereoMixLiveGrpcServer",
+      "Audience": {
+        "GameServer": "StereoMixLiveGameServer",
+        "Client": "StereoMixLiveClient"
+      }
+    }
+  }
 }
