게임버전에 맞춰 서버를 생성하고 입장할 수 있게 수정

--- a/src/StereoMix/appsettings.json
+++ b/src/StereoMix/appsettings.json
@@ -18,5 +18,16 @@
         "Client": "StereoMixLiveClient"
       }
     }
+  },
+  "Edgegap": {
+    "DeploymentOption": {
+      "Filter": {
+        "Field": "Country",
+        "FilterType": "Any",
+        "Values": [
+          "Sound Korea"
+        ]
+      }
+    }
   }
 }
