--- a/src/StereoMix/StereoMix.csproj
+++ b/src/StereoMix/StereoMix.csproj
@@ -19,10 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="3.15.2"/>
     <PackageReference Include="Google.Cloud.Firestore" Version="3.7.0"/>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.63.0" />
-    <PackageReference Include="Grpc.AspNetCore.HealthChecks" Version="2.63.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="8.0.6" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.63.0"/>
+    <PackageReference Include="Grpc.AspNetCore.HealthChecks" Version="2.63.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="8.0.6"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6"/>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1"/>
